--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: fernandohs99/python-app:${GITHUB_SHA::6}
+          tags: fernandohs99/python-app:${{ github.sha }}
